Initial framework push